--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   </main>
   <footer class="footer">
     <!-- Footer content goes here -->
-    <p>&copy; 2023 Rubén Fernández-Fuertes. All rights reserved.</p>
+    <p>&copy; 2023 Rubén Fernández-Fuertes.</p>
   </footer>
 </body>
 </html>
