--- a/resources.html
+++ b/resources.html
@@ -88,7 +88,7 @@
     </div>
     <footer class="footer", id="ftr">
         <!-- Footer content goes here -->
-        <p>&copy; 2023 Rubén Fernández-Fuertes. All rights reserved.</p>
+        <p>&copy; 2023 Rubén Fernández-Fuertes.</p>
       </footer>
 </body>
 </html>
