--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
   <link rel="stylesheet" type="text/css" href="styles/header.css">
   <link rel="stylesheet" type="text/css" href="styles/footer.css">
   <link rel="stylesheet" type="text/css" href="styles/main_style.css">
+  <script src="js/navbar.js"></script>
 </head>
 <body class="body", id="bd">
   <header class="header">
+    <div class="menu-icon"><i class="fa fa-bars"></i></div>
     <!-- Header content goes here -->
     <nav>
-
         <div class="social-media-icons">
             <a href="https://github.com/r-uben" target="_blank"><img src="styles/assets/github.png" alt="Github"></a>
             <a href="https://twitter.com/__rub_" target="_blank"><img src="styles/assets/twitter.png" alt="Twitter"></a>
@@ -31,9 +32,6 @@
         </div>
     </nav>
   </header>
-  <nav>
-    <!-- Navigation menu goes here -->
-  </nav>
   <main>
     <!-- Main content goes here -->
     <div class="box">
@@ -54,6 +52,13 @@
   </main>
   <footer class="footer">
     <!-- Footer content goes here -->
+    <nav>
+      <div class="social-media-icons-footer">
+          <a href="https://github.com/r-uben" target="_blank"><img src="styles/assets/github.png" alt="Github"></a>
+          <a href="https://twitter.com/__rub_" target="_blank"><img src="styles/assets/twitter.png" alt="Twitter"></a>
+          <a href="https://www.linkedin.com/in/rubén-fernández-fuertes/" target="_blank"><img src="styles/assets/linkedin.png" alt="linkedin"></a>
+      </div>
+  </nav>
     <p>&copy; 2023 Rubén Fernández-Fuertes.</p>
   </footer>
 </body>
