--- a/cv.html
+++ b/cv.html
@@ -50,6 +50,9 @@
             <div class="homepage">
                 <li><a href="index.html">Rubén Fernández-Fuertes</a></li>
             </div>
+            <div class="homepage-mobile-phone">
+                <a href="index.html"><img src="styles/assets/home.png" alt="home"></a>
+            </div>
         </nav>
     </header>
     <div class="content">
@@ -74,7 +77,7 @@
                 </p>
                 <p>
                     I have worked in Reinforcement Learning applied to 
-                    Portfolio Selection Optimisation problems, but I am also interested in Asset Pricing, Time Series Econometrics, Options, 
+                    Portfolio Selection Optimisation problems, but I am also interested in Asset Pricing, Macro-Finance, Time Series Econometrics, Options, 
                     Climate Finance and many other areas in Finance which can be deeply connected with Mathematics.
                 </p>
             </div>
@@ -82,6 +85,7 @@
         <div class="section">
             <h2>Education</h2>
             <hr>
+
             <div class="education">
                 <div>
                     <p><strong>Bachelor of Mathematics</strong></p>
@@ -97,6 +101,30 @@
                     <p><strong>MSc in Mathematical Finance</strong></p>
                     <p>University of Manchester </p>
                     <p>Graduated June 2021</p>
+                </div>
+            </div>
+            <style>
+                .education2 div:last-child {
+                    visibility: hidden;
+                    opacity: 0;
+                }
+            </style>
+            <div class="education2">
+                <div>
+                    <p><strong>PhD in Economics and Finance: Finance</strong></p>
+                    <p>Bocconi University </p>
+                    <p>In progress...</p>
+                </div>
+                
+                <div>
+                    <p><strong>CREI Macroeconomics Summer School</strong></p>
+                    <p>Barcelona School of Economics </p>
+                    <p>Attended June 2023</p>
+                </div>
+                <div>
+                    <p><strong>CREI Macroeconomics Summer School</strong></p>
+                    <p>Barcelona School of Economics </p>
+                    <p>Attended June 2023</p>
                 </div>
             </div>
         </div>
@@ -130,7 +158,7 @@
                 </div>
                 <div>
                 <p><strong>Italian</strong></p>
-                <p>Advanced Level (Without Certificate)</p>
+                <p>Advanced Level </p>
                 </div>
             </div>
         </div>
@@ -138,16 +166,26 @@
             <h2>Skills</h2>
             <hr>
             <div class="skills">
-            <p><strong> Python</strong></p>
-            <p>Advanced Level</p>
-            <p><strong> Matlab</strong></p>
-            <p>Advanced Level</p>
-            <p><strong> R</strong></p>
-            <p>Advanced Level</p>
-            <p><strong> C++</strong></p>
-            <p>Intermediate Level</p>
-            <p><strong> Stata</strong></p>
-            <p>Intermediate Level</p>
+                <div>
+                    <p><strong> Python</strong></p>
+                    <p>Advanced Level</p>
+                </div>
+                <div>
+                    <p><strong> Matlab</strong></p>
+                    <p>Advanced Level</p>
+                </div>
+                <div>
+                    <p><strong> R</strong></p>
+                    <p>Advanced Level</p>
+                </div>
+                <div>
+                    <p><strong> C++</strong></p>
+                    <p>Intermediate Level</p>
+                </div>
+                <div>
+                    <p><strong> Stata</strong></p>
+                    <p>Intermediate Level</p>
+                </div>
             </div>
 
         </div>
@@ -155,16 +193,18 @@
             <h2>Other Skills</h2>
             <hr>
             <div class="skills">
+                <div>
             <p><strong> <span class="latex">L<sup>a</sup>T<sub>e</sub>X</span></strong></p> 
             <!-- https://stackoverflow.com/questions/8160514/is-there-css-for-typesetting-the-latex-logo-in-html -->
             <p>Expert</p>
+        </div>
             </div>
 
         </div>
     </div>
     <footer class="footer", id="ftr">
         <!-- Footer content goes here -->
-        <p>&copy; 2023 Rubén Fernández-Fuertes. All rights reserved.</p>
+        <p>&copy; 2023 Rubén Fernández-Fuertes.</p>
       </footer>
 </body>
 </html>
