--- a/resources.html
+++ b/resources.html
@@ -50,6 +50,9 @@
             <div class="homepage">
                 <li><a href="index.html">Rubén Fernández-Fuertes</a></li>
             </div>
+            <div class="homepage-mobile-phone">
+                <a href="index.html"><img src="styles/assets/home.png" alt="home"></a>
+            </div>
         </nav>
     </header>
     <div class="content">
@@ -71,7 +74,7 @@
             </div>
         </div>
 
-        <div class="section">
+        <!-- <div class="section">
             <h2>Inhomogeneous Poisson Processes</h2>
             <hr>
             <div class="paper">
@@ -83,7 +86,7 @@
                 <strong>The post: </strong> <a class=links href="posts/inhomogeneous_pp.html"> Here</a>.
             </p>
             </div>
-        </div>
+        </div> -->
 
     </div>
     <footer class="footer", id="ftr">
