--- a/cv.html
+++ b/cv.html
@@ -103,12 +103,6 @@
                     <p>Graduated June 2021</p>
                 </div>
             </div>
-            <style>
-                .education2 div:last-child {
-                    visibility: hidden;
-                    opacity: 0;
-                }
-            </style>
             <div class="education2">
                 <div>
                     <p><strong>PhD in Economics and Finance: Finance</strong></p>
@@ -121,11 +115,11 @@
                     <p>Barcelona School of Economics </p>
                     <p>Attended June 2023</p>
                 </div>
-                <div>
+                <!-- <div>
                     <p><strong>CREI Macroeconomics Summer School</strong></p>
                     <p>Barcelona School of Economics </p>
                     <p>Attended June 2023</p>
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="section">
