--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
         <div class="homepage">
             <li><a href="index.html">Rubén Fernández-Fuertes</a></li>
         </div>
+        <div class="homepage-mobile-phone">
+          <a href="index.html"><img src="styles/assets/home.png" alt="home"></a>
+      </div>
     </nav>
   </header>
   <main>
@@ -46,7 +49,8 @@
                 and an MSc in Mathematical Finance from the University of Manchester (2020-2021). 
                 On this website you can find more information about my career. Briefly speaking, 
                 I am interested in the deep conection between Mathematics and Finance (Quantitative Finance, Mathematical Finance, Time Series Econometrics) 
-                within highly interesting disciplines such as Asset Pricing, Modern Portfolio Theory, Climate Finance, etc.</p>
+                within highly interesting disciplines such as Asset Pricing, Modern Portfolio Theory, Climate Finance, etc.
+              </p>
         </div>
     </div>
   </main>
@@ -58,7 +62,7 @@
           <a href="https://twitter.com/__rub_" target="_blank"><img src="styles/assets/twitter.png" alt="Twitter"></a>
           <a href="https://www.linkedin.com/in/rubén-fernández-fuertes/" target="_blank"><img src="styles/assets/linkedin.png" alt="linkedin"></a>
       </div>
-  </nav>
+    </nav>
     <p>&copy; 2023 Rubén Fernández-Fuertes.</p>
   </footer>
 </body>
