minor error fixed

--- a/index.html
+++ b/index.html
@@ -7,71 +7,63 @@
   <link rel="stylesheet" type="text/css" href="styles/socialmedia.css">
   <link rel="stylesheet" type="text/css" href="styles/header.css">
   <link rel="stylesheet" type="text/css" href="styles/footer.css">
+  <link rel="stylesheet" type="text/css" href="styles/main_style.css">
   <script src="js/navbar.js"></script>
 </head>
 <body class="body", id="bd">
   <header class="header">
     <div class="menu-icon"><i class="fa fa-bars"></i></div>
     <!-- Header content goes here -->
-    <nav class="navbar">
-        <!-- <div class="social-media-icons">
+    <nav>
+        <div class="social-media-icons">
             <a href="https://github.com/r-uben" target="_blank"><img src="styles/assets/github.png" alt="Github"></a>
             <a href="https://twitter.com/__rub_" target="_blank"><img src="styles/assets/twitter.png" alt="Twitter"></a>
             <a href="https://www.linkedin.com/in/rubén-fernández-fuertes/" target="_blank"><img src="styles/assets/linkedin.png" alt="linkedin"></a>
-        </div> -->
-        <div class="parent-header"> 
-          <div class="homepage">
-            <a href="index.html">Rubén Fernández-Fuertes</a>
         </div>
+        <ul>
+        <li><a href="#research">Research</a></li>
+        <li><a href="cv.html">CV</a></li>
+        <li><a href="#data">Data</a></li>
+        <li><a href="resources.html">Resources</a></li>
+        </ul>
 
+        <div class="homepage">
+            <li><a href="index.html">Rubén Fernández-Fuertes</a></li>
+        </div>
         <div class="homepage-mobile-phone">
           <a href="index.html"><img src="styles/assets/home.png" alt="home"></a>
-        </div>
-
-          <div class="web-sections">
-            <ul>
-              <li><a href="#research">Research</a></li>
-              <li><a href="cv.html">CV</a></li>
-              <li><a href="#data">Data</a></li>
-              <li><a href="resources.html">Resources</a></li>
-            </ul>
-          </div>
       </div>
     </nav>
   </header>
   <main>
     <!-- Main content goes here -->
-      <div class="box">
-          <div class="text-box">
-              <h2>About me</h2>
-              <p>My name is Rubén Fernández-Fuertes, and I am a 2nd year PhD student in Finance at Bocconi University (Milan, Italia). 
-                  I hold a BSc degree in Mathematics from the Autonomous University of Madrid (2015-2019), 
-                  an MSc in Teacher Training (2019-2020) from the European University, 
-                  and an MSc in Mathematical Finance from the University of Manchester (2020-2021). 
-                  On this website you can find more information about my career. Briefly speaking, 
-                  I am interested in the deep conection between Mathematics and Finance (Quantitative Finance, Mathematical Finance, Time Series Econometrics) 
-                  within highly interesting disciplines such as Asset Pricing, Modern Portfolio Theory, Climate Finance, etc.
-                </p>
-          </div>
-          <div class="image-box">
+    <div class="box">
+        <div class="image-box">
             <img src="styles/assets/homepage.jpeg" alt="Example Image 1">
         </div>
-      </div>
+        <div class="text-box">
+            <h2>About me</h2>
+            <p>My name is Rubén Fernández-Fuertes, and I am a 2nd year PhD student in Finance at Bocconi University (Milan, Italia). 
+                I hold a BSc degree in Mathematics from the Autonomous University of Madrid (2015-2019), 
+                an MSc in Teacher Training (2019-2020) from the European University, 
+                and an MSc in Mathematical Finance from the University of Manchester (2020-2021). 
+                On this website you can find more information about my career. Briefly speaking, 
+                I am interested in the deep conection between Mathematics and Finance (Quantitative Finance, Mathematical Finance, Time Series Econometrics) 
+                within highly interesting disciplines such as Asset Pricing, Modern Portfolio Theory, Climate Finance, etc.
+              </p>
+        </div>
+    </div>
   </main>
   <footer class="footer">
     <!-- Footer content goes here -->
     <nav>
-      <div class="parent-footer">
-        <div class="signature">
-          <p>&copy; 2023 Rubén Fernández-Fuertes.</p>
-        </div>
-        <div class="social-media-icons-footer">
-            <a href="https://github.com/r-uben" target="_blank"><img src="styles/assets/github.png" alt="Github"></a>
-            <a href="https://twitter.com/__rub_" target="_blank"><img src="styles/assets/x.png" alt="Twitter"></a>
-            <a href="https://www.linkedin.com/in/rubén-fernández-fuertes/" target="_blank"><img src="styles/assets/linkedin.png" alt="linkedin"></a>
-        </div>
-    </div>
+      <div class="social-media-icons-footer">
+          <a href="https://github.com/r-uben" target="_blank"><img src="styles/assets/github.png" alt="Github"></a>
+          <a href="https://twitter.com/__rub_" target="_blank"><img src="styles/assets/twitter.png" alt="Twitter"></a>
+          <a href="https://www.linkedin.com/in/rubén-fernández-fuertes/" target="_blank"><img src="styles/assets/linkedin.png" alt="linkedin"></a>
+      </div>
     </nav>
+    <p>&copy; 2023 Rubén Fernández-Fuertes.</p>
   </footer>
 </body>
 </html>
