--- a/index.html
+++ b/index.html
@@ -45,13 +45,15 @@
       <div class="box">
           <div class="text-box">
               <h2>About me</h2>
-              <p>My name is Rubén Fernández-Fuertes, and I am a 2nd year PhD student in Finance at Bocconi University (Milan, Italia). 
+              <p> I am Rubén Fernández-Fuertes, a 2nd year PhD student in Finance at Bocconi University (Milan, Italy). 
                   I hold a BSc degree in Mathematics from the Autonomous University of Madrid (2015-2019), 
                   an MSc in Teacher Training (2019-2020) from the European University, 
                   and an MSc in Mathematical Finance from the University of Manchester (2020-2021). 
                   On this website you can find more information about my career. Briefly speaking, 
-                  I am interested in the deep conection between Mathematics and Finance (Quantitative Finance, Mathematical Finance, Time Series Econometrics) 
-                  within highly interesting disciplines such as Asset Pricing, Modern Portfolio Theory, Climate Finance, etc.
+                  I am interested in Macro-Finance, Asset Pricing, Climate Finance, Mathematical Finance and Portfolio Theory. I'm 
+                  currently working on my second year paper about Inflation-Linked Government Bonds.
+
+                  Feel free to contact me in English, Spanish or Italian. 
                 </p>
           </div>
           <div class="image-box">
