Mobile phone done

--- a/cv.html
+++ b/cv.html
@@ -22,18 +22,15 @@
                   <a href="index.html">Rubén Fernández-Fuertes</a>
               </div>
       
-              <div class="homepage-mobile-phone">
-                <a href="index.html"><img src="styles/assets/home.png" alt="home"></a>
+              <div class="web-sections">
+                <ul>
+                 <li class="home-link"><a href="index.html">Home</a></li>
+                  <li><a href="#research">Research</a></li>
+                  <li><a href="cv.html">CV</a></li>
+                  <li><a href="#data">Data</a></li>
+                  <li><a href="resources.html">Resources</a></li>
+                </ul>
               </div>
-      
-                <div class="web-sections">
-                  <ul>
-                    <li><a href="#research">Research</a></li>
-                    <li><a href="cv.html">CV</a></li>
-                    <li><a href="#data">Data</a></li>
-                    <li><a href="resources.html">Resources</a></li>
-                  </ul>
-                </div>
             </div>
         </nav>
     </header>
