--- a/index.html
+++ b/index.html
@@ -25,12 +25,9 @@
             <a href="index.html">Rubén Fernández-Fuertes</a>
           </div>
 
-        <div class="homepage-mobile-phone">
-          <a href="index.html"><img src="styles/assets/home.png" alt="home"></a>
-        </div>
-
           <div class="web-sections">
             <ul>
+              <li><a href="index.html">Home</a></li>
               <li><a href="#research">Research</a></li>
               <li><a href="cv.html">CV</a></li>
               <li><a href="#data">Data</a></li>
