--- a/cv.html
+++ b/cv.html
@@ -25,7 +25,7 @@
               <div class="web-sections">
                 <ul>
                  <li class="home-link"><a href="index.html">Home</a></li>
-                  <li><a href="#research">Research</a></li>
+                  <li><a href="research.html">Research</a></li>
                   <li><a href="cv.html">CV</a></li>
                   <li><a href="#data">Data</a></li>
                   <li><a href="resources.html">Resources</a></li>
@@ -194,9 +194,16 @@
             <hr>
             <div class="skills">
                 <div>
-            <p><strong> <span class="latex">L<sup>a</sup>T<sub>e</sub>X</span></strong></p> 
-            <!-- https://stackoverflow.com/questions/8160514/is-there-css-for-typesetting-the-latex-logo-in-html -->
-            <p>Expert</p>
+                <p><strong> <span class="latex">L<sup>a</sup>T<sub>e</sub>X</span></strong></p> 
+                <!-- https://stackoverflow.com/questions/8160514/is-there-css-for-typesetting-the-latex-logo-in-html -->
+                <p>Expert</p>
+                </div>
+                <div>
+                    <p><strong> HTML & CSS</strong></p> 
+                    <!-- https://stackoverflow.com/questions/8160514/is-there-css-for-typesetting-the-latex-logo-in-html -->
+                    <p>Intermediate level</p>
+                </div>
+            </div>
         </div>
             </div>
 
