--- a/resources.html
+++ b/resources.html
@@ -24,7 +24,7 @@
               <div class="web-sections">
                 <ul>
                   <li class="home"><a href="index.html">Home</a></li>
-                  <li><a href="#research">Research</a></li>
+                  <li><a href="research.html">Research</a></li>
                   <li><a href="cv.html">CV</a></li>
                   <li><a href="#data">Data</a></li>
                   <li><a href="resources.html">Resources</a></li>
