--- a/index.html
+++ b/index.html
@@ -42,15 +42,14 @@
       <div class="box">
           <div class="text-box">
               <h2>About me</h2>
-              <p> I am Rubén Fernández-Fuertes, a 2nd year PhD student in Finance at Bocconi University (Milan, Italy). 
+              <p> I am Rubén Fernández-Fuertes, a 3rd year PhD student in Finance at Bocconi University (Milan, Italy). 
                   I hold a BSc degree in Mathematics from the Autonomous University of Madrid (2015-2019), 
                   an MSc in Teacher Training (2019-2020) from the European University, 
                   and an MSc in Mathematical Finance from the University of Manchester (2020-2021). 
                   On this website you can find more information about my career. Briefly speaking, 
                   I am interested in Macro-Finance, Asset Pricing, Climate Finance, Mathematical Finance and Portfolio Theory. I'm 
-                  currently working on my second year paper about Inflation-Linked Government Bonds.
+                  currently working on my paper titled <i> Monetary Policy Amidst and Post-COVID: Comparing the Fed and the ECB</i>.
 
-                  Feel free to contact me in English, Spanish or Italian. 
                 </p>
           </div>
           <div class="image-box">
