--- a/research.html
+++ b/research.html
@@ -50,7 +50,9 @@
                         Instead, synchronising the Eurozone's cyclical rates with those of the US proves more effective.
                     </p>
                     <p>
-                        <strong>Link to the paper:</strong> <a class="links" href="https://www.dropbox.com/scl/fi/sxuoase9v2himvcxe93kc/main.pdf?rlkey=oyipwfjutdo32mq29oeqa6yjn&dl=0">Here</a>.
+                        <strong>Link to the paper:</strong> <a class="links" href="/papers/FernandezFuertes_Ruben_2ndYearPaper.pdf">Here</a>.
+
+                        <!-- <strong>Link to the paper:</strong> <a class="links" href="https://www.dropbox.com/scl/fi/qhj78w5d62y4gu6c7w7l1/FernandezFuertes_Ruben_2ndYearPaper.pdf?rlkey=9c8nvix4vng9hk6ij52kszs43&dl=0">Here</a>. -->
                     </p>
                 </div>
                 <!-- You can add more papers in the same format here -->
