2nd Year Paper name changed

--- a/research.html
+++ b/research.html
@@ -39,7 +39,7 @@
             <hr>
             <div class="papers">
                 <div class="paper">
-                    <h3 class="subtitle">Monetary Policy Amidst and Post-COVID: Comparing the Fed and the ECB.</h3>
+                    <h3 class="subtitle">Monetary Policy in the COVID Era and Beyond: The Fed vs the ECB.</h3>
                     <p><strong class="coauthor">With Carlo Favero (2023).</strong></p>
                     <p class="abstract">
                         This study examines monetary policy during and post-COVID by analysing innovative rules based on data from before the pandemic. 
