Add Macro Data repository

--- a/cv.html
+++ b/cv.html
@@ -64,7 +64,7 @@
         </div>
 
         <div class="section">
-            <h2>Work Experience</h2>
+            <h2>Research Assistanships</h2>
             <hr>
 
             <div class="section-content-horizontal">
@@ -83,6 +83,32 @@
 
             </div>
         </div>
+        
+        <div class="section">
+            <h2>Teaching Assistanships</h2>
+            <hr>
+
+            <div class="section-content-horizontal">
+                <div class="section-content-horizontal-left">
+                    <p><strong>Courses A.Y. 2023/2024</strong></p>
+                    <p>20897 Advanced Corporate Finance for Management </p>
+                    <p>30454 Logic and Methodology of Social Sciences </p>
+                    <p>30560 Mathematical Modelling for Finance </p>
+                </div>
+                <div class="section-content-horizontal-right">
+                    <p><strong>Courses A.Y. 2023/2024</strong></p>
+                    <p>20135 Teoria della Finanza / TTheory of Finance </p>
+                    <p>20136 Advanced Mathematics for Economics and Social Sciences </p>
+                    <p>20897 Advanced Corporate Finance for Management </p>
+                    <p>30268 Matematica Generale e Finanziaria /Mathematics </p>
+                    <p>30454 Logic and Methodology of Social Sciences </p>
+                    <p>30560 Mathematical Modelling for Finance </p>
+                </div>
+
+            </div>
+        </div>
+
+
         <div class="section">
             <h2>Education</h2>
             <hr>
