--- a/resources.html
+++ b/resources.html
@@ -52,6 +52,19 @@
             </div>
         </div>
 
+        <div class="section">
+            <h2> Macroeconomic Data repository</h2>
+            <hr>
+            <div class="paper">
+            <p><strong class="subtitle">Summary:</strong></p>
+            <p class="abstract"> This repository is dedicated to downloading and cleaning various macroeconomic datasets, focusing on the US and the Euro Zone.
+            </p>
+            <p>
+                <strong>Link to the repository: </strong> <a class=links href="https://github.com/r-uben/macro_data" > Here</a>.
+            </p>
+            </div>
+        </div>
+
         <!-- <div class="section">
             <h2>Inhomogeneous Poisson Processes</h2>
             <hr>
