Adding paper on term structure

--- a/research.html
+++ b/research.html
@@ -55,7 +55,26 @@
                         <!-- <strong>Link to the paper:</strong> <a class="links" href="https://www.dropbox.com/scl/fi/qhj78w5d62y4gu6c7w7l1/FernandezFuertes_Ruben_2ndYearPaper.pdf?rlkey=9c8nvix4vng9hk6ij52kszs43&dl=0">Here</a>. -->
                     </p>
                 </div>
-                <!-- You can add more papers in the same format here -->
+                <div class="paper">
+                    <h3 class="subtitle">Modelling the Term Structure with Trends in Yields
+                        and Cycles in Excess Returns.</h3>
+                    <p><strong class="coauthor">With Carlo Favero (2023).</strong></p>
+                    <p class="abstract">
+                        This paper proposes an Affine Macro Term Structure model in which yields
+                        are drifting, sharing a common stochastic trend driven by the drift in short-term
+                        (monetary policy) rates and excess returns are stationary as the compensation
+                        for risk is driven by the cycles in yields. We apply the approach to US data and
+                        compare the empirical results from the new specification with those obtained
+                        from standard Affine Term Structure models. The cycle-trend decomposition-
+                        based Affine Term Structure model produces much better forecasts of the dy-
+                        namics of yields and, consequently, different and stationary dynamics for the
+                        term premia.
+                    <p>
+                        <strong>Link to the paper:</strong> <a class="links" href="/papers/2023b_favero_fernandezfuertes.pdf">Here</a>.
+
+                        <!-- <strong>Link to the paper:</strong> <a class="links" href="https://www.dropbox.com/scl/fi/qhj78w5d62y4gu6c7w7l1/FernandezFuertes_Ruben_2ndYearPaper.pdf?rlkey=9c8nvix4vng9hk6ij52kszs43&dl=0">Here</a>. -->
+                    </p>
+                </div>
             </div>
         </div>
         
