Update website styles

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </section>
             <section id="contact">
                 <h2>Contact</h2>
-                <p>You can reach me at: <a href="mailto:fernandezfuertesruben@gmail.com" class="email-link">fernandezfuertesruben@gmail.com</a></p>
+                <p style="text-align: center;"><a href="mailto:fernandezfuertesruben@gmail.com" class="email-link">fernandezfuertesruben@gmail.com</a></p>
             </section>
             
         </main>
