Update website changes

--- a/index.html
+++ b/index.html
@@ -9,16 +9,21 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/academicons/1.9.0/css/academicons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
+    <meta name="description" content="Academic portfolio of Rubén Fernández-Fuertes, PhD Student in Finance at Bocconi University, specializing in Macro-Finance and Monetary Policy.">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-    <div class="nav-button" id="navButton">
-        <div class="bar"></div>
-        <div class="bar"></div>
-        <div class="bar"></div>
+    <button id="theme-toggle" aria-label="Toggle dark mode" class="theme-toggle">
+        <i class="fas fa-moon"></i>
+    </button>
+    <div class="nav-button" id="navButton" aria-label="Toggle navigation menu" role="button" tabindex="0">
+        <div class="bar" aria-hidden="true"></div>
+        <div class="bar" aria-hidden="true"></div>
+        <div class="bar" aria-hidden="true"></div>
     </div>
-    <nav class="fixed-nav" id="fixedNav">
-        <ul>
-            <li><a href="#top">Home</a></li>
+    <nav class="fixed-nav" id="fixedNav" aria-label="Main navigation">
+        <ul role="menubar">
+            <li role="none"><a href="#top" role="menuitem">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#research">Research</a></li>
             <li><a href="#teaching">Teaching</a></li>
@@ -66,8 +71,8 @@
                             <p class="paper-abstract">This study examines monetary policy during and post-COVID by analysing innovative rules based on data from before the pandemic. It models fluctuating monetary policy rates using a stochastic trend, linking potential output growth, demographic age distribution, and inflation expectations to the prevailing interest rate trends in both the US and the Eurozone. The cyclical variations in short-term rates are associated with monetary policy through the conventional Taylor rule indicators. Whilst the standard model is robust for the US both in and out of sample, the Eurozone displays less consistent in-sample results and marked deviations in out-of-sample tests. Addressing the ECB's concerns about bond market fragmentation doesn't yield better results. Instead, a model in which the ECB follows the US example with caution and delay proves more effective.</p>
                         </div>
                         <div class="paper-figure">
-                            <img src="images/2023_favero/fig5_EA.png">
-                            <img src="images/2023_favero/fig5_US.png">
+                            <img src="images/2023_favero/fig5_EA.png" loading="lazy" alt="Euro Area figure">
+                            <img src="images/2023_favero/fig5_US.png" loading="lazy" alt="US figure">
                         </div>
                     </li>
                     <li class="paper-item">
@@ -87,7 +92,8 @@
                 <h3>Courses a.y. 2024/2025</h3>
                 <ul>
                     <li><strong>20136</strong> <a href="https://didattica.unibocconi.eu/ts/tsn_anteprima.php?cod_ins=20136&anno=2025&IdPag=" class="course-link">ADVANCED MATHEMATICS FOR ECONOMICS AND SOCIAL SCIENCES</a> (TA)</li>
-                    <li><strong>30560</strong> <a href="https://didattica.unibocconi.eu/ts/tsn_anteprima.php?cod_ins=30560&anno=2025&IdPag=" class="course-link">MATHEMATICAL MODELLING FOR FINANCE</a> (Teaching)</li>
+                    <li><strong>30560</strong> <a href="https://didattica.unibocconi.eu/ts/tsn_anteprima.php?cod_ins=30560&anno=2025&IdPag=" class="course-link">MATHEMATICAL MODELLING FOR FINANCE</a> (Teaching, Master Course)</li>
+                    <li><strong>40215</strong> <span class="course-link">FINANCE 2</span> (Teaching, PhD Course)</li>
                 </ul>
                 <h3>Courses a.y. 2023/2024</h3>
                 <ul>
