Update main branch

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <li><a href="#about">About</a></li>
             <li><a href="#research">Research</a></li>
             <li><a href="#teaching">Teaching</a></li>
+            <li><a href="#resources">Resources</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
@@ -40,6 +41,7 @@
                         <li><a href="#about">About</a></li>
                         <li><a href="#research">Research</a></li>
                         <li><a href="#teaching">Teaching</a></li>
+                        <li><a href="#resources">Resources</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
                 </nav>
@@ -109,6 +111,32 @@
                     <li><strong>20211</strong> <a href="https://didattica.unibocconi.eu/ts/tsn_anteprima.php?cod_ins=20211&anno=2023&IdPag=" class="course-link">FINANCIAL MANAGEMENT E CORPORATE BANKING / FINANCIAL MANAGEMENT AND CORPORATE BANKING</a> (TA)</li>
                     <li><strong>30454</strong> <a href="https://didattica.unibocconi.eu/ts/tsn_anteprima.php?cod_ins=30454&anno=2023&IdPag=" class="course-link">       LOGIC AND METHODOLOGY OF SOCIAL SCIENCES</a> (TA)</li>
                     <li><strong>30560</strong> <a href="https://didattica.unibocconi.eu/ts/tsn_anteprima.php?cod_ins=30560&anno=2023&IdPag=" class="course-link">MATHEMATICAL MODELLING FOR FINANCE</a> (TA)</li>
+                </ul>
+            </section>
+            <section id="resources">
+                <h2>Resources</h2>
+                <p>Here you can find some useful resources and code repositories:</p>
+                <ul class="resources-list">
+                    <li class="resource-item">
+                        <a href="https://github.com/r-uben/ConsensusEconomics" class="resource-link" target="_blank" rel="noopener noreferrer">
+                            <i class="fab fa-github"></i>
+                            ConsensusEconomics Data Handler
+                        </a>
+                        <div class="resource-description">
+                            <p class="disclaimer">
+                                <strong>IMPORTANT DISCLAIMER:</strong> This repository requires a valid Consensus Economics subscription. 
+                                Access to Consensus Economics' proprietary database is a prerequisite for utilizing this code. 
+                                This repository does not contain or share any Consensus Economics data; it solely provides tools 
+                                and methods for processing and analyzing the data once you have legitimate access to it through 
+                                a valid subscription.
+                            </p>
+                            <p>
+                                A collection of tools and utilities designed to efficiently handle and process Consensus Economics 
+                                datasets. This repository includes functions for data cleaning, transformation, and analysis, 
+                                specifically tailored for working with Consensus Economics' file formats and data structures.
+                            </p>
+                        </div>
+                    </li>
                 </ul>
             </section>
             <section id="contact">
