--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/academicons/1.9.0/css/academicons.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
     <meta name="description" content="Academic portfolio of Rubén Fernández-Fuertes, PhD Student in Finance at Bocconi University, specializing in Macro-Finance and Monetary Policy.">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -46,9 +46,9 @@
                     </ul>
                 </nav>
                 <div class="social-media">
-                    <a href="https://twitter.com/rubenffuertes" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a>
-                    <a href="https://www.linkedin.com/in/rub%C3%A9n-fern%C3%A1ndez-fuertes/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i></a>
-                    <a href="https://github.com/r-uben" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
+                    <a href="https://twitter.com/rubenffuertes" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-x-twitter"></i></a>
+                    <a href="https://www.linkedin.com/in/rub%C3%A9n-fern%C3%A1ndez-fuertes/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://github.com/r-uben" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
                     <a href="https://scholar.google.com/citations?user=Njnfu0YAAAAJ&hl=en" target="_blank" rel="noopener noreferrer"><i class="ai ai-google-scholar"></i></a>
                 </div>
             </div>
@@ -119,7 +119,7 @@
                 <ul class="resources-list">
                     <li class="resource-item">
                         <a href="https://github.com/r-uben/ConsensusEconomics" class="resource-link" target="_blank" rel="noopener noreferrer">
-                            <i class="fab fa-github"></i>
+                            <i class="fa-brands fa-github"></i>
                             ConsensusEconomics Data Handler
                         </a>
                         <div class="resource-description">
