macroeconomics_data added

--- a/index.html
+++ b/index.html
@@ -137,6 +137,26 @@
                             </p>
                         </div>
                     </li>
+                    
+                    <li class="resource-item">
+                        <a href="https://github.com/r-uben/macroeconomics_data" class="resource-link" target="_blank" rel="noopener noreferrer">
+                            <i class="fa-brands fa-github"></i>
+                            Macroeconomic Data Analysis
+                        </a>
+                        <div class="resource-description">
+                            <p>
+                                A Python package for fetching, analyzing, and storing macroeconomic data from Federal Reserve Economic Data (FRED) 
+                                with AWS integration and LLM capabilities via Groq. Features include:
+                            </p>
+                            <ul>
+                                <li>Automated retrieval of key economic indicators from FRED API</li>
+                                <li>AWS Integration for secure storage and management</li>
+                                <li>LLM Analysis using Groq's capabilities</li>
+                                <li>Interactive command-line interface for custom data queries</li>
+                                <li>Tracking of essential metrics (GDP, Industrial Production, Unemployment, CPI, etc.)</li>
+                            </ul>
+                        </div>
+                    </li>
                 </ul>
             </section>
             <section id="contact">
