--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     <li class="resource-item">
                         <a href="https://github.com/r-uben/macroeconomics_data" class="resource-link" target="_blank" rel="noopener noreferrer">
                             <i class="fa-brands fa-github"></i>
-                            Macroeconomic Data Analysis
+                            Macroeconomic Data Handler
                         </a>
                         <div class="resource-description">
                             <p>
