--- a/index.html
+++ b/index.html
@@ -149,9 +149,8 @@
                                 with AWS integration and LLM capabilities via Groq. Features include:
                             </p>
                             <ul>
-                                <li>Automated retrieval of key economic indicators from FRED API</li>
+                                <li>Automated retrieval of key economic indicators from FRED API using LLM capabilities via Groq to find the appropriate code for the variable the researcher is asking for</li>
                                 <li>AWS Integration for secure storage and management</li>
-                                <li>LLM Analysis using Groq's capabilities</li>
                                 <li>Interactive command-line interface for custom data queries</li>
                                 <li>Tracking of essential metrics (GDP, Industrial Production, Unemployment, CPI, etc.)</li>
                             </ul>
