GreenBook Projections added

--- a/index.html
+++ b/index.html
@@ -145,11 +145,13 @@
                         </a>
                         <div class="resource-description">
                             <p>
-                                A Python package for fetching, analyzing, and storing macroeconomic data from Federal Reserve Economic Data (FRED) 
+                                A continuously updated Python package for fetching, analyzing, and storing macroeconomic data. 
+                                Currently integrates data from Federal Reserve Economic Data (FRED) and Federal Reserve Green Book Projections, 
                                 with AWS integration and LLM capabilities via Groq. Features include:
                             </p>
                             <ul>
                                 <li>Automated retrieval of key economic indicators from FRED API using LLM capabilities via Groq to find the appropriate code for the variable the researcher is asking for</li>
+                                <li>Historical Federal Reserve Green Book Projections data extraction and analysis</li>
                                 <li>AWS Integration for secure storage and management</li>
                                 <li>Interactive command-line interface for custom data queries</li>
                                 <li>Tracking of essential metrics (GDP, Industrial Production, Unemployment, CPI, etc.)</li>
