term structure added

--- a/index.html
+++ b/index.html
@@ -158,6 +158,26 @@
                             </ul>
                         </div>
                     </li>
+                    <li class="resource-item">
+                        <a href="https://github.com/r-uben/term_structure" class="resource-link" target="_blank" rel="noopener noreferrer">
+                            <i class="fa-brands fa-github"></i>
+                            Term Structure Analysis
+                        </a>
+                        <div class="resource-description">
+                            <p>
+                                This repository implements the model developed in the forthcoming Econometric Reviews paper 
+                                "Towards Data-Congruent Models of the Term Structure of Interest Rates". It provides a comprehensive 
+                                implementation of term structure models for analyzing yield curves and macroeconomic factors, focusing on:
+                            </p>
+                            <ul>
+                                <li>Implementation of ACM (Adrian, Crump, Moench) and FF (Favero-Fuertes) models</li>
+                                <li>Data-congruent term structure modeling with macroeconomic factors</li>
+                                <li>Common trend component analysis</li>
+                                <li>Out-of-sample forecasting comparisons</li>
+                                <li>Visualization tools for yield curves, model parameters, and returns</li>
+                            </ul>
+                        </div>
+                    </li>
                 </ul>
             </section>
             <section id="contact">
