term structure added

--- a/index.html
+++ b/index.html
@@ -166,11 +166,12 @@
                         <div class="resource-description">
                             <p>
                                 This repository implements the model developed in the forthcoming Econometric Reviews paper 
-                                "Towards Data-Congruent Models of the Term Structure of Interest Rates". It provides a comprehensive 
-                                implementation of term structure models for analyzing yield curves and macroeconomic factors, focusing on:
+                                "Towards Data-Congruent Models of the Term Structure of Interest Rates" (coauthored with Carlo A. Favero). 
+                                It provides a comprehensive implementation of term structure models for analyzing yield curves and macroeconomic 
+                                factors, focusing on:
                             </p>
                             <ul>
-                                <li>Implementation of ACM (Adrian, Crump, Moench) and FF (Favero-Fuertes) models</li>
+                                <li>Implementation of ACM (Adrian, Crump, Moench) and FF (Favero, Fernández-Fuertes) models</li>
                                 <li>Data-congruent term structure modeling with macroeconomic factors</li>
                                 <li>Common trend component analysis</li>
                                 <li>Out-of-sample forecasting comparisons</li>
