Some description is changed

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                     <li class="resource-item">
                         <a href="https://github.com/r-uben/term_structure" class="resource-link" target="_blank" rel="noopener noreferrer">
                             <i class="fa-brands fa-github"></i>
-                            Term Structure Analysis
+                            Term Structure Models Implementation (Classical vs Mine)
                         </a>
                         <div class="resource-description">
                             <p>
