Term premia figure is updated

--- a/index.html
+++ b/index.html
@@ -178,6 +178,9 @@
                                 <li>Visualization tools for yield curves, model parameters, and returns</li>
                             </ul>
                         </div>
+                        <div class="paper-figure">
+                            <img src="images/2024_favero/term_premia_comparison.svg" loading="lazy" alt="Term Premium Comparison between ACM and FF models">
+                        </div>
                     </li>
                 </ul>
             </section>
