--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                             <p class="paper-abstract">This paper proposes an Affine Macro Term Structure model in which yields are drifting, sharing a common stochastic trend driven by the drift in short-term (monetary policy) rates and excess returns are stationary as the compensation for risk is driven by the cycles in yields. We apply the approach to US data and compare the empirical results from the new specification with those obtained from standard Affine Term Structure models. The cycle-trend decomposition-based Affine Term Structure model produces much better forecasts of the dynamics of yields and, consequently, different and stationary dynamics for the term premia.</p>
                         </div>
                         <div class="paper-figure">
-                            <img src="images/2024_favero/term_premium_comparison.png">
+                            <img src="images/2024_favero/term_premia_comparison.svg" loading="lazy" alt="Term Premium Comparison between ACM and FF models">
                         </div>
                     </li>
                 </ul>
